--- a/templates/icinga2.conf.j2
+++ b/templates/icinga2.conf.j2
@@ -38,9 +38,12 @@ include <manubulon>
  * and removing symbolic links in the features-enabled directory.
  */
 include "features-enabled/*.conf"
-
+{% if icinga2_local_conf %}
 /**
  * Although in theory you could define all your objects in this file
  * the preferred way is to create separate directories and files in the conf.d
  * directory. Each of these files must have the file extension ".conf".
  */
+include_recursive "conf.d"
+{% endif %}
+
