--- a/templates/host.conf.j2
+++ b/templates/host.conf.j2
@@ -8,6 +8,14 @@ object Host "{{ icinga2_cs_host_objectname }}" {
 {% if icinga2_cs_host_notes is defined %}
   notes = "{{ icinga2_cs_host_notes }}"
 {% endif %}
+{% if icinga2_cs_host_groups is defined %}
+  groups += [
+    {%- for g in icinga2_cs_host_groups %}
+	{{'\n    "' + g + '",'}}
+	{%- endfor %}
+
+  ]
+{% endif %}
 {% if icinga2_cs_host_check_command is defined %}
   check_command = "{{ icinga2_cs_host_check_command }}"
 {% endif %}
